[tool.poetry]
name = "opencomputers-controller"
version = "0.1.0"
description = "Code to control robots / drones in OpenComputers"
authors = ["quinn-n <quinnneufeld@protonmail.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
click = "^8.1.7"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pyglet = "^2.0.10"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
ipython = "^8.20.0"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
